<resources>
    <string name="app_name">Погода Иркутск</string>
    <string name="action_settings">Настройки</string>
    <string name="loading">загрузка...</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="action_logs">Лог</string>

    <string name="pref_title_sync_frequency">Частота запроса</string>
    <string name="pref_title_update_frequency">Частота запроса</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_update_start">Время старта</string>
    <string name="pref_default_update_start">0</string>
    <string name="pref_title_font_size">Размер шрифта</string>



    <string name="save_log_Title">Писать лог</string>
    <string name="pref_header_general">Основные</string>
    <string name="pref_title_timeout">Time Out Соединения (сек)</string>
    <string name="action_backgroundStatus">Разрешения</string>
    <string name="error">Ошибка</string>
    <string name="not_data">Нет данных</string>
    <string name="title_activity_settings2">Настройки</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="politic">Privacy Policy</string>
    <string name="politic_link">https://lebalex.ru/politic_weather.html</string>
</resources>
